--- a/src/app/components/modals/manage-instruction-modal-component/manage-instruction-modal-component.component.html
+++ b/src/app/components/modals/manage-instruction-modal-component/manage-instruction-modal-component.component.html
@@ -1,4 +1,4 @@
-<app-ui-modal [(isOpen)]="isManageInstructionModalOpen" width="600">
+<app-ui-modal [(isOpen)]="isManageInstructionModalOpen" width="700">
   <h3 class="modal_title">
     {{ currentInstruction()!.title }}
   </h3>
@@ -9,6 +9,7 @@
         <th class="th">Назва Протоколу</th>
         <th class="th">Тип ремонту</th>
         <th class="th">Реєстрація</th>
+        <th class="th">Перегляд зареєстрованих протоколів</th>
       </tr>
       </thead>
       <tbody class="tbody">
@@ -18,6 +19,9 @@
             <td class="td">{{ protocol.repairType }}</td>
             <td class="td">
               <app-ui-button (btnClick)="openRegProtocolModal(protocol)">Зареєструвати</app-ui-button>
+            </td>
+            <td class="td">
+              <app-ui-button (btnClick)="openRegisteredProtocols(protocol)">Завантажити</app-ui-button>
             </td>
           </tr>
         }
