--- a/src/app/components/modals/registration-protocol-modal/registration-protocol-modal.component.html
+++ b/src/app/components/modals/registration-protocol-modal/registration-protocol-modal.component.html
@@ -1,4 +1,4 @@
-<app-ui-modal [(isOpen)]="isRegProtocolModalOpen" width="950">
+<app-ui-modal [(isOpen)]="isRegistrationProtocolModalOpen" width="950">
   <h4 class="title">{{ currentProtocol().title }}</h4>
   <div class="protocol">
     <table class="protocol__table">
