--- a/src/app/components/table-component/table-component.component.html
+++ b/src/app/components/table-component/table-component.component.html
@@ -70,14 +70,22 @@
   [(protocolTemplateId)]="protocolTemplateId"
   [(instructionId)]="instructionId"
 />
-<app-reg-protocol-modal-component
+<app-registration-protocol-modal-component
   [user] = "user()"
   [(measurementsArray)]="measurementsArray"
   [(currentInstruction)] = "currentInstruction"
-  [(isRegProtocolModalOpen)]="isRegProtocolModalOpen"
+  [(isRegistrationProtocolModalOpen)]="isRegProtocolModalOpen"
   [(currentProtocol)]="currentProtocol"/>
 <app-registered-protocol-modal-component
   [(isRegisteredProtocolModalOpen)]="isRegisteredProtocolModalOpen"
   [(protocolTemplateId)]="protocolTemplateId"
   [(instructionId)]="instructionId"
+  [(isRegProtTableModalOpen)]="isRegProtTableModalOpen"
+  [(protocolId)]="protocolId"
+/>
+<app-reg-prot-table-modal-component
+  [(isRegProtTableModalOpen)]="isRegProtTableModalOpen"
+  [protocolTemplateId]="protocolTemplateId()"
+  [protocolId]="protocolId()"
+  [instructionId]="instructionId()"
 />
