--- a/src/app/components/table-component/table-component.component.html
+++ b/src/app/components/table-component/table-component.component.html
@@ -86,6 +86,7 @@
 <app-reg-prot-table-modal-component
   [(isRegProtTableModalOpen)]="isRegProtTableModalOpen"
   [protocolTemplateId]="protocolTemplateId()"
+  [(currentInstruction)] = "currentInstruction"
   [protocolId]="protocolId()"
   [instructionId]="instructionId()"
 />
