--- a/src/app/components/modals/manage-instruction-modal-component/manage-instruction-modal-component.component.scss
+++ b/src/app/components/modals/manage-instruction-modal-component/manage-instruction-modal-component.component.scss
@@ -16,7 +16,8 @@ th, td{
 }
 
 th:nth-of-type(1),td:nth-of-type(1){
-  min-width: 200px;
+  min-width: 150px;
+  max-width: 180px;
 }
 
 th:nth-of-type(2), td:nth-of-type(2){
