--- a/src/app/components/modals/reg-prot-table-modal-component/reg-prot-table-modal-component.component.html
+++ b/src/app/components/modals/reg-prot-table-modal-component/reg-prot-table-modal-component.component.html
@@ -48,7 +48,7 @@
       <tbody class="protocol__tbody">
       <tr class="protocol__tr">
         <td class="protocol__td">{{ protocolTemplate()?.repairType }}</td>
-        <td class="protocol__td">Роботи, що виконуються</td>
+        <td class="protocol__td" style="min-width: 400px">Роботи, що виконуються</td>
       </tr>
         @for (jobTemplate of protocolTemplate()?.jobs; let m = $index; track m) {
           @if (jobTemplate.jobsDesc.length === 1) {
@@ -56,7 +56,7 @@
               <td class="protocol__td">{{ jobTemplate.number }}</td>
               <td class="protocol__td" [attr.data-job-number]="jobTemplate.number">{{ jobTemplate.jobsDesc[0] }}</td>
               @for (protocol of protocol(); let i = $index; track i) {
-                 <td class="protocol__td longcell" style="text-align: center">{{getJobDisplay(protocol.jobs[m])}}</td>
+                 <td [class.coloured]="getJobDisplay(protocol.jobs[m])[0].hasNote" class="protocol__td longcell" style="text-align: center">{{getJobDisplay(protocol.jobs[m])[0].text}}</td>
               }
             </tr>
           } @else {
@@ -64,7 +64,7 @@
               <td class="protocol__td" [attr.rowspan]="jobTemplate.jobsDesc.length">{{ jobTemplate.number }}</td>
               <td class="protocol__td" [attr.data-job-number]="jobTemplate.number">{{ jobTemplate.jobsDesc[0] }}</td>
               @for (protocol of protocol(); let i = $index; track i) {
-                <td class="protocol__td longcell">{{ getJobDisplay(protocol.jobs[m])[0]}}</td>
+                <td [class.coloured]="getJobDisplay(protocol.jobs[m])[0].hasNote" class="protocol__td longcell">{{ getJobDisplay(protocol.jobs[m])[0].text}}</td>
               }
             </tr>
             @for (jobDesc of jobTemplate.jobsDesc; let j = $index; track j) {
@@ -72,7 +72,7 @@
                 <tr class="protocol__tr">
                   <td class="protocol__td longcell" [attr.data-job-number]="jobTemplate.number">{{ jobDesc }}</td>
                   @for (protocol of protocol(); let i = $index; track i) {
-                    <td class="protocol__td longcell" style="text-align: center">{{getJobDisplay(protocol.jobs[m])[j]}}</td>
+                    <td [class.coloured]="getJobDisplay(protocol.jobs[m])[j].hasNote" class="protocol__td longcell" style="text-align: center">{{getJobDisplay(protocol.jobs[m])[j].text}}</td>
                   }
                 </tr>
               }
