--- a/src/app/components/modals/reg-prot-table-modal-component/reg-prot-table-modal-component.component.html
+++ b/src/app/components/modals/reg-prot-table-modal-component/reg-prot-table-modal-component.component.html
@@ -1,6 +1,7 @@
 <app-ui-modal [(isOpen)]="isRegProtTableModalOpen" width="950">
-
+  <h2 class="protocol__title">{{protocol()?.[0]?.title}}</h2>
   <div class="protocol">
+
     <table class="protocol__table">
       <thead class="protocol__thead">
         @if (protocolTemplate()?.equipmentInfo?.length === 0) {
@@ -117,9 +118,36 @@
       <tr class="protocol__tr">
         <td class="protocol__td longcell"></td>
         <td class="protocol__td longcell">ЗВТ</td>
+        @for (protocol of protocol(); track $index){
+          <td class="protocol__td">
+            <app-ui-button (btnClick)="showMeasurements(protocol.measurementsArray!)">Показати ЗВТ</app-ui-button>
+          </td>
+        }
       </tr>
       </tfoot>
     </table>
+    @if (measurementsArray()?.length){
+      <h3 class="protocol__zvt-text">При роботі використовувались ЗВТ:</h3>
+      <table class="protocol__zvt-table">
+        <thead class="protocol__zvt-thead">
+        <th class="protocol__zvt-th">Найменування</th>
+        <th class="protocol__zvt-th">Тип</th>
+        <th class="protocol__zvt-th">Заводський номер</th>
+        <th class="protocol__zvt-th">Дата наступної перевірки</th>
+
+        <tbody class="protocol__zvt-tbody">
+          @for (measurement of measurementsArray(); track $index) {
+            <tr class="protocol__zvt-tr">
+              <td class="protocol__zvt-td">{{measurement.title}}</td>
+              <td class="protocol__zvt-td">{{measurement.type}}</td>
+              <td class="protocol__zvt-td">{{measurement.number}}</td>
+              <td class="protocol__zvt-td">{{measurement.date}}</td>
+            </tr>
+          }
+
+        </tbody>
+      </table>
+    }
 
   </div>
 
