--- a/src/app/components/table-component/table-component.component.scss
+++ b/src/app/components/table-component/table-component.component.scss
@@ -62,3 +62,13 @@
     transform: translate(1px, 1px);
   }
 }
+
+.green{
+  background-color: var(--green-color);
+}
+.yellow{
+  background-color: var(--yellow-color);
+}
+.red{
+  background-color: var(--red-color);
+}
