--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,9 @@
   --light-color: #fcfcfc;
   --black-color: #000000;
   --dark-color: #141414;
+  --green-color: rgba(26, 143, 0, 0.8);
+  --yellow-color: rgba(255, 242, 0, 0.8);
+  --red-color: rgba(248, 7, 7, 0.8);
   --hover-color: #dcdcdc;
   --active-color: #bcbcbc;
   --modal-bg-color: rgba(220, 220, 220, 0.5);
