--- a/src/app/components/modals/manage-instruction-modal-component/manage-instruction-modal-component.component.html
+++ b/src/app/components/modals/manage-instruction-modal-component/manage-instruction-modal-component.component.html
@@ -1,7 +1,12 @@
 <app-ui-modal [(isOpen)]="isManageInstructionModalOpen" width="700">
   <h3 class="modal_title">
-    {{ currentInstruction()!.title }}
+    {{currentInstruction()!.number}}. {{ currentInstruction()!.title }}
   </h3>
+  <div class="modal_inst-info">
+    <p class="modal_text">Дата затвердження: {{currentInstruction()!.date | date : 'dd.MM.yyyy'}}</p>
+    <p class="modal_text">Розробник: {{currentInstruction()!.user_title}} (тел. {{userPhone()}})</p>
+    <p class="modal_text">Теги: {{currentInstruction()!.tegs}}</p>
+  </div>
   @if (protocols().length !== 0) {
     <table class="table">
       <thead class="thead">
