--- a/src/app/components/modals/manage-instruction-modal-component/manage-instruction-modal-component.component.scss
+++ b/src/app/components/modals/manage-instruction-modal-component/manage-instruction-modal-component.component.scss
@@ -1,6 +1,22 @@
 .modal_title{
   text-align: center;
   margin-bottom: 20px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: var(--hover-color);
+  box-shadow: var(--btn-box-shadow);
+}
+
+.modal_inst-info{
+  padding: 10px;
+  border-radius: 5px;
+  background-color: var(--hover-color);
+  box-shadow: var(--btn-box-shadow);
+  margin-bottom: 10px;
+}
+
+.modal_text:not(:last-child){
+  margin-bottom: 10px;
 }
 
 .table{
