зроблено підсвічування інструкцій з близькими термінами перегляду

--- a/src/app/UIComponents/ui-button/ui-button.component.scss
+++ b/src/app/UIComponents/ui-button/ui-button.component.scss
@@ -4,6 +4,7 @@
   border-radius: 4px;
   transition-duration: 0.1s;
   box-shadow: var(--btn-box-shadow);
+  background-color: #fcfcfc
 }
 
 .btn:hover {
